--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"H:/game jams/Time Strider 1.3;H:/game jams/Time Strider 1.1;H:/game jams/Time Striders 1.0;H:/game jams;H:/game jams/Invasion-of-Time-Knight-Action-/WebGL Builds;;;;;\"}"
+                "value": "{\"m_Value\":\"H:/game jams/Time Strider 1.4;H:/game jams/Time Strider 1.3;H:/game jams/Time Strider 1.1;H:/game jams/Time Striders 1.0;H:/game jams;H:/game jams/Invasion-of-Time-Knight-Action-/WebGL Builds;;;;\"}"
             }
         ]
     }
